@@ -20,7 +20,7 @@ class RtfFormatter(Formatter):
     Formats tokens as RTF markup. This formatter automatically outputs full RTF
     documents with color information and other useful stuff. Perfect for Copy and
     Paste into Microsoft® Word® documents.
-    
+
     *New in Pygments 0.6.*
 
     Additional options accepted:
