@@ -22,7 +22,7 @@ class CSharpLexer(RegexLexer):
     For `C# <http://msdn2.microsoft.com/en-us/vcsharp/default.aspx>`_
     source code.
     """
-    
+
     name = 'C#'
     aliases = ['csharp', 'c#']
     filenames = ['*.cs']
@@ -83,7 +83,7 @@ class BooLexer(RegexLexer):
     """
     For `Boo <http://boo.codehaus.org/>`_ source code.
     """
-    
+
     name = 'Boo'
     aliases = ['boo']
     filenames = ['*.boo']
@@ -152,7 +152,7 @@ class VbNetLexer(RegexLexer):
     `Visual Basic.NET <http://msdn2.microsoft.com/en-us/vbasic/default.aspx>`_
     source code.
     """
-    
+
     name = 'VB.net'
     aliases = ['vb.net', 'vbnet']
     filenames = ['*.vb', '*.bas']
