@@ -5,6 +5,10 @@ Version 0.7
 -----------
 (codename to be selected, released Feb XX, 2007)
 
+- Added Java Server Pages lexer, thanks to Tim Hatch.
+
+- Added Windows Batchfile lexer, thanks to Tim Hatch.
+
 - Added Trac Wiki markup lexer, thanks to Tim Hatch.
 
 - Added Python traceback lexer, thanks to Tim Hatch.
